Fixed the loading icon and some css. The loading Icon sometimes were behind the table. It's now fixed. The Add Comment button got now the correct color scheame. Removed dotted white border from Add customer button.

--- a/application/css/style.less
+++ b/application/css/style.less
@@ -167,6 +167,20 @@ nav {
     }
 }
 
+.invalid-feedback {
+    font-weight: bold;
+    color: @backgroundColor1 !important;
+}
+
+.btn {
+    background-color: @mainColor2 !important;
+    border-color:  @mainColor2 !important
+}
+
+.btn:hover {
+    background-color: darken(@mainColor2,10%) !important;
+    border-color: darken(@mainColor2,10%) !important;
+}
 
 
 #icons() {
@@ -285,4 +299,8 @@ nav {
     font-size: 16px;
     color: @backgroundColor1;
     margin-top: 10px;
+}
+
+#createBtn:focus {
+    outline: none;
 }
